--- a/styles.css
+++ b/styles.css
@@ -1039,6 +1039,7 @@ font-size: 1.6rem;
 background-color: var(--clr-logo-bg);
 padding: 2rem;
 margin-bottom: 1rem;
+margin: 1rem;
 }
 
 .sub-bell {
@@ -1077,6 +1078,82 @@ margin-left: 1rem;
   width: 80%;
   background: url('/images/icons/mail.svg') no-repeat 10px center;
   
+}
+}
+@media (width < 1024px) {
+
+  .faq-window {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .faq {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 1rem;
+  }
+  .contact-grid {
+    display: none;
+  }
+
+  .btn-contact {
+    display: none;
+  }
+ 
+  .contact-grid-tablet {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+  }
+
+  .Subscribe {
+    background-color: var(--clr-logo-bg);
+    padding: 2rem;
+    margin-bottom: 1rem;
+    margin: 1rem;
+    }
+    
+    .sub-bell {
+    display: flex;
+    align-items: center;
+    margin-bottom: 2rem;
+    margin-left: 1rem;
+    }
+    
+    .bell {
+      width: 80px;
+      height: auto;
+      margin-right: 1rem;
+    }
+    .subscribe-text {
+      font-size: 1.35rem;
+      font-weight: 800;
+    }
+    .subscribe-form {
+      display: flex;
+    
+    }
+    
+    .btn-subscribe {
+      background-color: #6366F1;
+      color: white;
+      padding: 1.2rem;
+      border-bottom-right-radius: 10px;
+      border-top-right-radius: 10px;
+    
+      
+    }
+  .input-field {
+    flex: 1;
+    padding: 10px 10px 10px 40px;
+    width: 80%;
+    background: url('/images/icons/mail.svg') no-repeat 10px center;
+}
+
+.contact-card {
+  display: none;
 }
 }
 
