--- a/styles.css
+++ b/styles.css
@@ -1031,7 +1031,8 @@ ul {
   
 .faq-section {
     
-   /* display: none; */
+display: grid;
+grid-template-columns: 1fr;
     
   .faq-window {
     max-width: auto;
@@ -1210,8 +1211,12 @@ ul {
 }
 
 @media (width > 1200px) {
-  
+ grid-template-columns: repeat(2, 1fr);
+
+
 }
+
+.
 }
 
 /* FAQ END */
@@ -1219,12 +1224,14 @@ ul {
 /* SUBSCRIBE START */
 
 .subscribe-section {
-  
+
   .subscribe {
     background-color: var(--clr-logo-bg);
     border-radius: 0.7rem;
     justify-items: center;
     align-items: center;
+    align-content: center;
+    justify-content: center;
     
     display: grid;  
     grid-template-columns: 1fr;
@@ -1232,9 +1239,7 @@ ul {
     padding-top: 4rem;
     
 
-    .container {
-      
-    }
+
   }
   
   .sub-bell {
@@ -1260,7 +1265,8 @@ ul {
     border: 1px solid var(--clr-gray-400);
     border-radius: .8rem .8rem .8rem .8rem;
     overflow: hidden;
-
+    margin-left: 1rem;
+    margin-right: 1rem;
     align-items: center;
     background-color: white;
   }
@@ -1292,18 +1298,18 @@ ul {
     
   }
   @media (min-width: 768px) {
+
+
     .subscribe {
       
-      
+
       grid-template-columns: 1fr 1fr;
       padding-top: 3.5rem;
       padding-bottom: 2rem;
+      padding-right: 1rem;
     }
     .subscribe-form {
-      margin-top: 2rem;
-      /* margin-right: 1rem; */
-      margin-bottom: 3rem;
-      padding-right: 1rem;
+      margin-bottom: 1rem;
       
     }
 
@@ -1325,6 +1331,9 @@ ul {
   display: flex;
   align-items: center;
   justify-content: center;
+  padding-top: 2rem;
+  padding-bottom: 2.5rem;
+  text-align:  center;
 }
 
 /* FOOTER END */
