--- a/styles.css
+++ b/styles.css
@@ -1035,122 +1035,89 @@ ul {
   display: grid;
   grid-template-columns: 1fr;
   padding-top: 3rem;
-
+/*   padding: .3rem; */
+/*   background-color: transparent; */
+/*   box-shadow: none; */
+  
   .faq-window {
     max-width: auto;
 
     .faq-headline {
     padding-bottom: 1rem;
+    text-align: center;
+    font-weight: extra-bold;
+    font-size: 1.6rem;
     }
 
     .faq-mobile-subtext {
       padding-bottom: 3rem;
+      color: var(#585C7B);
+      font-size: 1.1rem;
+      text-align: center;
     }
   }
   
 
   
-  .question {
-    border-radius: 10px;
-    padding: 0.5rem;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-    
-  }
-  
-
-
-  .contact {
-    display: block;
-  }
-  
-
-  
-  .contact-container {
-    display: flex;
-    gap: 1rem;
-  }
-  
   .faq-accordion {
- 
-  }
-  
-  .faq .question {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    cursor: pointer;
-  }
-  
-  .answer {
-    max-height: 0;
-    overflow: hidden;
-    transition: max-height 0.3s ease-out;
-    font-size: 0.875rem;
-    color: var(#585C7B);
-    
-  }
-  
-  .faq.active .answer {
-    max-height: 1000px;
-    transition: max-height 0.3s ease-in-out;
-  }
-  
-  .faq-down-btn {
-    display: flex;
-    width: 40px;
-    height: 40px;
-    aspect-ratio: 1;
-    border-radius: 50%;
-    align-items: center;
-    justify-content: center;
-    text-decoration: none;
-    background-color: #F3F6FF;
-    border: 0;
-    cursor: pointer;
-    transition: transform 0.5s ease-in;
-  }
-  
-  .faq-down-btn i {
-    transition: transform 0.3s ease;
-  }
-  
-  
-  .faq-section {
-    padding: .3rem;
-    background-color: transparent;
-    box-shadow: none;
-    
-    
-    
-  }
-  
 
-  
-  
-  .faq-headline {
-    text-align: center;
-    font-weight: extra-bold;
-    font-size: 1.6rem;
+
+    .faq {
+      .question {
+        border-radius: 10px;
+        padding: 0.5rem;
+        box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        cursor: pointer;
+        font-size: 1rem;
+        padding: .2rem;
+        margin: 0;
+
+        .faq-down-btn {
+          display: flex;
+          width: 40px;
+          height: 40px;
+          aspect-ratio: 1;
+          border-radius: 50%;
+          align-items: center;
+          justify-content: center;
+          text-decoration: none;
+          background-color: #F3F6FF;
+          border: 0;
+          cursor: pointer;
+          transition: transform 0.5s ease-in;
+        }
+        
+        .faq-down-btn i {
+          transition: transform 0.3s ease;
+        }
+      }
+      .answer {
+        max-height: 0;
+        overflow: hidden;
+        transition: max-height 0.3s ease-out;
+        font-size: 0.875rem;
+        color: var(#585C7B);
+        
+      }
+    }
+
+    .faq.active .answer {
+      max-height: 1000px;
+      transition: max-height 0.3s ease-in-out;
+    }
   }
   
-  .faq-mobile-subtext {
-    color: var(#585C7B);
-    font-size: 1.1rem;
-    text-align: center;
-  }
-  
-  .question {
-    font-size: 1rem;
-    padding: .2rem;
-    margin: 0;
-  }
-  
+ 
   .contact-container {
     display: none;
  
   }
-   .contact {
-     .container {
+
+  .contact {
+    .container {
       display: grid;
       grid-template-columns: 1fr;
       justify-items: center;
@@ -1162,7 +1129,7 @@ ul {
 
       }
     }
-   }
+  }
   
   
   @media (width > 768px) {
@@ -1231,7 +1198,8 @@ ul {
     grid-template-columns: 40% 1fr;
     gap: 6rem;
     padding-top: 4.5rem;
-    padding-bottom: 11rem;
+    margin-bottom: 11rem;
+    /* padding-bottom: 11rem; */
     text-align: left;
 
     
